end of first draft AMS

--- a/paper/AMS/combinatorics.tex
+++ b/paper/AMS/combinatorics.tex
@@ -92,13 +92,13 @@ The $f$-polynomial, the $b$-polynomial, and the M\"obius polynomial of the hyper
 %
 For the arrangement~$\arrangement$ of $5$ hyperplanes of \cref{fig:arrangement}, we have
 \[
-\mobPol = x^2y^2 - 5x^2y + 6x^2 + 5xy - 10x + 4 \ ,
+\mobPol = x^2y^2 - 5x^2y + 6x^2 + 5xy - 10x + 4 ,
 \]
 so that
 \[
 \fPol = \mobPol[\arrangement][-x][-1] = 12 \, x^2 + 15 \, x + 4 
 \qquad \text{and}\qquad
-\bPol = \mobPol[\arrangement][-x][1] = 2 \, x^2 + 5 \, x + 4 \ .
+\bPol = \mobPol[\arrangement][-x][1] = 2 \, x^2 + 5 \, x + 4 .
 \]
 \end{example}
 
@@ -355,7 +355,7 @@ Remarkably, the flat poset (and thus the M\"obius, $f$- and $b$- polynomials) of
 We first introduce the main characters of this section, which will describe the combinatorics of the flat poset of the $(\ell,n)$-braid arrangement~$\multiBraidArrangement$ of \cref{def:multiBraidArrangement}.
 
 \begin{definition}
-\label{def:partitionForests}
+\label{def:intersectionHypergraph}
 The \defn{intersection hypergraph} of a $\ell$-tuple~$\b{F} \eqdef (F_1, \dots, F_\ell)$ of set partitions of~$[n]$ is the $\ell$-regular $\ell$-partite hypergraph on all parts of all the partitions~$F_i$ for~${i \in [\ell]}$, with a hyperedge connecting the parts containing~$j$  for each~$j \in [n]$.
 \end{definition}
 
