--- a/paper/AMS/higher.tex
+++ b/paper/AMS/higher.tex
@@ -137,7 +137,7 @@ We shall call such geometrically defined operadic structures and tensor products
 There are exactly 
 \begin{enumerate}
 \item two geometric operadic diagonals of the Forcey multiplihedra, the $\LA$ and $\SU$ diagonals,
-\item two geometric topological cellular colored operad structures (over the Loday associahedra) on the Forcey multiplihedra,
+\item two geometric topological cellular operadic bimodule structures (over the Loday associahedra) on the Forcey multiplihedra,
 \item two compatible geometric universal tensor products of $\Ainf$-algebras and $\Ainf$-morphisms,
 \end{enumerate}
 which agree with the Tamari-type order on atomic $2$-colored nested linear trees. 
@@ -281,7 +281,7 @@ Recall that the topological cellular operadic bimodule structure on the Forcey m
 \K_{(i_1,\ldots,i_k)} \times \J_{i_1} \times \cdots \times \J_{i_k} 
 \arrow[rr,hookrightarrow, "\Theta^{i_1, \ldots , i_k}"]
 & &
-\J_{i_1+\cdots + i_k}\ .
+\J_{i_1+\cdots + i_k}\, .
 \end{tikzcd}
 }}
 \]
@@ -401,8 +401,6 @@ The datum of a diagonal of the operad $\Ainf$ encoding $\Ainf$-algebras and a di
 	However, for linear trees with $5$ and $6$ internal edges, the number of facets of the $\LA$ and $\SU$ diagonals differ, as displayed in \cref{table:multiplihedra}.
 	To compute these numbers, we first computed the facets of the $\LA$ and $\SU$ diagonals of the permutahedra, and then used the projection from the permutahedra to the multiplihedra described in the proof of \cite[Thm.~3.3.6]{Doker}.
 \end{example}
-
-\newpage
 
 \begin{figure}[h]
 \begin{tabular}{cccccc}
@@ -744,7 +742,7 @@ The datum of a diagonal of the operad $\Ainf$ encoding $\Ainf$-algebras and a di
 \label{fig:trees}
 \end{figure}
 
-\begin{figure}[h]
+\begin{table}[h]
 	\begin{center}
 	\begin{tabular}{c|c|c|c|c|c} 
 	Internal edges & $\LA$ diagonal & $\LA$ only & Shared & $\SU$ only & $\SU$ diagonal \\
@@ -759,5 +757,6 @@ The datum of a diagonal of the operad $\Ainf$ encoding $\Ainf$-algebras and a di
 	\end{center}
 	\caption{Number of facets in the $\LA$ and $\SU$ diagonals of the multiplihedra, indexed by linear trees with $n$ internal edges.}
 	\label{table:multiplihedra}
-\end{figure}
+\end{table}
+
 
