--- a/paper/AMS/intro.tex
+++ b/paper/AMS/intro.tex
@@ -44,7 +44,7 @@ We now proceed to introduce separately each part in more detail.
 
 %%%%%%%%%%%%%%%
 
-\section*{\cref{part:multiBraidArrangements}. Combinatorics of multiple braid arrangements}
+\subsection*{\cref{part:multiBraidArrangements}. Combinatorics of multiple braid arrangements}
 
 As the dual of the permutahedron~$\Perm$ is the classical braid arrangement~$\braidArrangement$, the dual of a diagonal of the permutahedron~$\Perm$ is a hyperplane arrangement~$\multiBraidArrangement[n][2]$ made of $2$ generically translated copies of the braid arrangement~$\braidArrangement$.
 In the first part of the paper, we therefore study the combinatorics of the $(\ell,n)$-braid arrangement~$\multiBraidArrangement$, defined as the union of $\ell$ generically translated copies of the braid arrangement~$\braidArrangement$ (\cref{def:multiBraidArrangement}).
@@ -116,7 +116,7 @@ We provide a combinatorial description of the possible orderings of a $(\ell,n)$
 
 %%%%%%%%%%%%%%%
 
-\section*{\cref{part:diagonalsPermutahedra}. Diagonals of permutahedra}
+\subsection*{\cref{part:diagonalsPermutahedra}. Diagonals of permutahedra}
 
 We present cellular diagonals, the Fulton--Sturmfels method, the magical formula and specialize the results of Part I to the permutahedra in \cref{sec:cellularDiagonals}.
 Then, we initiate in \cref{sec:operadicDiagonals} the study of operadic diagonals (\cref{def:operadicDiagonal}).
@@ -191,7 +191,7 @@ The above theorem also allows us to translate the different combinatorial descri
 
 In \cref{sec:Shift-lattice}, we show that the facets of operadic diagonals are disjoint unions of lattices, that we call the \emph{shift lattices}.
 These lattices are isomorphic to a product of chains, and are indexed by the permutations of $[n]$.
-Moreover, while the pairs of facets of operadic are intervals of the facial weak order (\cref{sec:facial-weak-order}), the shift lattices are not sub-lattices of this order's product (see \cref{fig: Inversion and lattice counter example}). 
+Moreover, while the pairs of facets of operadic diagonals are intervals of the facial weak order (\cref{sec:facial-weak-order}), the shift lattices are not sub-lattices of this order's product (see \cref{fig: Inversion and lattice counter example}). 
 
 Finally, we present the alternative cubical (\cref{sec:Cubical}) and matrix (\cref{subsec:matrix}) descriptions of the $\SU$ diagonal from \cite{SaneblidzeUmble,SaneblidzeUmble-comparingDiagonals}, providing proofs of their equivalence with the other descriptions, and giving their $\LA$ counterparts. 
 The existence of this cubical description, based on a subdivision of the cube combinatorially isomorphic to the permutahedron, finds its conceptual root in the bar-cobar resolution of the associative permutad. 
@@ -200,7 +200,7 @@ Indeed, this resolution is encoded by the dual subdivision of the permutahedron,
 %%%%%%%%%%%%%%%
 
 \pagebreak
-\section*{\cref{part:higherAlgebraicStructures}. Higher algebraic structures}
+\subsection*{\cref{part:higherAlgebraicStructures}. Higher algebraic structures}
 
 In this shorter third part of the paper, we derive some higher algebraic consequences of the preceding results, which were the original motivation for the present study.
 They concern the \emph{operahedra}, a family of polytopes indexed by planar trees, which encode (non-symmetric non-unital) homotopy operads \cite{LaplanteAnfossi}, and the \emph{multiplihedra}, a family of polytopes indexed by $2$-colored nested linear trees, which encode $\Ainf$-morphisms \cite{LaplanteAnfossiMazuir}.
@@ -226,7 +226,7 @@ The main results concerning the multiplihedra are summarized as follows.
 	There are exactly 
 	\begin{enumerate}
 	\item two geometric operadic diagonals of the Forcey multiplihedra, the $\LA$ and $\SU$ diagonals,
-	\item two geometric topological cellular colored operad structures (over the Loday associahedra) on the Forcey multiplihedra,
+	\item two geometric topological cellular operadic bimodule structures (over the Loday associahedra) on the Forcey multiplihedra,
 	\item two compatible geometric universal tensor products of $\Ainf$-algebras and $\Ainf$-morphisms,
 	\end{enumerate}
 	which agree with the Tamari-type order on atomic $2$-colored nested linear trees. 
@@ -234,7 +234,7 @@ The main results concerning the multiplihedra are summarized as follows.
 \end{theorem*}
 
 Here, by the adjective ``geometric", we mean diagonal, operadic structure and tensor product which are obtained geometrically on the polytopes via the Fulton--Sturmfelds method. 
-By ``universal", we mean formulas for the tensor products which applies to \emph{any} pair of homotopy operads or $\Ainf$-morphisms.
+By ``universal", we mean formulas for the tensor products which apply to \emph{any} pair of homotopy operads or $\Ainf$-morphisms.
 
 However, the isomorphisms of topological operads (\resp operadic bimodules) takes place in a category of polytopes $\PolySub$ for which the morphisms are \emph{not} affine maps \cite[Def. 4.13]{LaplanteAnfossi}, and it does \emph{not} commute with the diagonal maps (\cref{ex:iso-not-Hopf,ex:iso-not-Hopf-2}).
 Moreover, the pairs of faces in the image of the two operadic diagonals are in general not in bijection (see \cref{ex:operahedra-LA-SU,ex:multiplihedra-LA-SU}), yielding different (but $\infty$-isomorphic) tensor products of homotopy operads (\resp \mbox{$\Ainf$-morphisms}).
