--- a/paper/AMS/acknowledgements.tex
+++ b/paper/AMS/acknowledgements.tex
@@ -1,6 +1,7 @@
 \chapter*{Acknowledgements}
 
-We are indebted to Matthieu Josuat-Vergès for taking part in the premises of this paper, in particular for conjecturing the case $\ell = 2$ of \cref{thm:verticesRefinedMultiBraidArrangement}, for working on the proof of \cref{thm:patterns}, and for implementing some sage code used during the project. GLA is grateful to Hugh Thomas for raising the question to count the facets of the $\LA$ diagonal and for preliminary discussions during a visit at the LACIM in the summer of 2021 where the project started, and to the Max Planck Institute for Mathematics in Bonn where part of this work was carried out.
+We are indebted to Matthieu Josuat-Vergès for taking part in the premises of this paper, in particular for conjecturing the case $\ell = 2$ of \cref{thm:verticesRefinedMultiBraidArrangement}, for working on the proof of \cref{thm:patterns}, and for implementing some sage code used during the project.
+GLA is grateful to Hugh Thomas for raising the question to count the facets of the $\LA$ diagonal and for preliminary discussions during a visit at the LACIM in the summer of 2021 where the project started, and to the Max Planck Institute for Mathematics in Bonn where part of this work was carried out.
 We are grateful to Sylvie Corteel for pointing out the relevance of the dual perspective for the purpose of counting.
 VP is grateful to the organizers (Karim Adiprasito, Alexey Glazyrin, Isabella Novic, and Igor Pak) of the workshop ``Combinatorics and Geometry of Convex Polyhedra'' held at the Simons Center for Geometry and Physics in March 2023 for the opportunity to present a preliminary version of our enumerative results, and to  Pavel Galashin for asking about the characteristic polynomial of the multiple braid arrangement during this presentation.
 We thank Samson Saneblidze and Ron Umble for useful correspondence.
