--- a/paper/AMS/Diagonalpermutohedra.tex
+++ b/paper/AMS/Diagonalpermutohedra.tex
@@ -14,7 +14,7 @@
 
 %    Include referenced packages here.
 \usepackage[T1]{fontenc}
-\usepackage{enumerate, amsmath, amsfonts, amssymb, amsthm, mathrsfs, wasysym, graphics, graphicx, url, hyperref, hypcap, shuffle, xargs, multicol, overpic, pdflscape, multirow, hvfloat, minibox, accents, array, multido, xifthen, a4wide, ae, aecompl, blkarray, pifont, mathtools, etoolbox, dsfont, stmaryrd}
+\usepackage{enumerate, amsmath, amsfonts, amssymb, amsthm, mathrsfs, wasysym, graphics, graphicx, url, hyperref, hypcap, shuffle, xargs, multicol, overpic, pdflscape, multirow, hvfloat, minibox, accents, array, multido, xifthen, ae, aecompl, blkarray, pifont, mathtools, etoolbox, dsfont, stmaryrd}
 \usepackage[dvipsnames]{xcolor}
 \usepackage{marginnote}
 \hypersetup{colorlinks=true, citecolor=darkblue, linkcolor=darkblue}
@@ -350,22 +350,17 @@ In the third part of the paper, we use the preceding results to show that there 
 
 \end{abstract}
 
-\vspace*{-1.4cm}
 \maketitle
 
-\vspace*{-.6cm}
-\centerline{\includegraphics[scale=.75]{diagonalPermutahedron3}}
-\vspace*{-.2cm}
+%\centerline{\includegraphics[scale=.75]{diagonalPermutahedron3}}
 
-\newpage
-\enlargethispage{1cm}
 \tableofcontents
 
 
 
 %    Include unnumbered chapters (preface, acknowledgments, etc.) here.
 \include{intro}
- \include{acknowledgements}
+\include{acknowledgements}
 
 \mainmatter
 %    Include main chapters here.
