--- a/paper/AMS/combinatorics.tex
+++ b/paper/AMS/combinatorics.tex
@@ -130,32 +130,32 @@ See \cref{fig:facePosetBraidArrangement3,fig:intersectionPosetBraidArrangement3,
 %	\label{fig:braidArrangement3}
 %\end{figure}
 
-\afterpage{
+%\afterpage{
 \begin{figure}
 	\centerline{\includegraphics[scale=.6]{figures/facePosetBraidArrangement3}}
 	\caption{The face poset~$\facePoset[{\braidArrangement[3]}]$ of the braid arrangement $\braidArrangement[3]$ (left), where faces are represented as cones (middle) or as ordered set partitions of~$[3]$ (right).}
 	\label{fig:facePosetBraidArrangement3}
 \end{figure}
-}
+%}
 
-\afterpage{
+%\afterpage{
 \begin{figure}
 	\centerline{\includegraphics[scale=.6]{figures/intersectionPosetBraidArrangement3}}
 	\caption{The flat poset~$\flatPoset[{\braidArrangement[3]}]$ of the braid arrangement $\braidArrangement[3]$, where flats are represented as intersections of hyperplanes (left) or as set partitions of~$[3]$ (right).}
 	\label{fig:intersectionPosetBraidArrangement3}
 \end{figure}
-}
+%}
 
-\afterpage{
+%\afterpage{
 \begin{figure}
 	\centerline{\includegraphics[scale=.26]{figures/intersectionPosetBraidArrangement4}}
 	\caption{The flat poset~$\flatPoset[{\braidArrangement[4]}]$ of the braid arrangement $\braidArrangement[4]$, where flats are represented as intersections of hyperplanes (top) or as set partitions of~$[4]$ (bottom).}
 	\label{fig:intersectionPosetBraidArrangement4}
 \end{figure}
-}
+%}
 
 \begin{definition}
-Fix~$n \ge 1$ and denote by~$\HH$ the hyperplane of~$\R^n$ defined by~$\sum_{s \in [n]} x_s = 0$.
+Fix~$n \ge 1$ and denote by~$\HH$ the hyperplane of~$\R^n$ defined by the equality~${\sum_{s \in [n]} x_s = 0}$.
 The \defn{braid arrangement}~$\braidArrangement$ is the arrangement of the hyperplanes~$\set{\b{x} \in \HH}{x_s = x_t}$ for all~${1 \le s < t \le n}$.
 \end{definition}
 
